--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,10 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# This allows Gradle to compile independent modules in parallel
+org.gradle.parallel=true
+# Gradle store and reuse any files it can from previos builds
+org.gradle.caching=true
+# Gradle not reconfigure modules that aren't involved in the tasks it's running
+org.gradle.configureondemand=true
