--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,4 @@ org.gradle.parallel=true
 # Gradle store and reuse any files it can from previos builds
 org.gradle.caching=true
 # Gradle not reconfigure modules that aren't involved in the tasks it's running
-org.gradle.configureondemand=true
+#org.gradle.configureondemand=true // Cause errors when implement a project
