--- a/features/detail/src/main/AndroidManifest.xml
+++ b/features/detail/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pvthiendeveloper.detail">
+    package="com.pvthiendeveloper.coinprice.detail">
 
 </manifest>
