--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pvthiendeveloper.coinprice">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".CoinPriceApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".CoinPriceApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CoinPrice">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/CoinPrice">
         <activity
-            android:name=".presentation.MainActivity"
-            android:exported="true">
+            android:name="com.pvthiendeveloper.coinprice.home.presentation.MainActivity"
+            android:exported="true"
+            android:theme="@style/CoinPrice.Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
