--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/CoinPrice">
         <activity
-            android:name="com.pvthiendeveloper.coinprice.presentation.MainActivity"
+            android:name="com.pvthiendeveloper.coinprice.home.presentation.MainActivity"
             android:exported="true"
             android:theme="@style/CoinPrice.Splash">
             <intent-filter>
