--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name="com.pvthiendeveloper.coinprice.home.presentation.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/CoinPrice.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
